Update cv, fix links and remove some information

--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -4,15 +4,8 @@
             <p>
                 Meu blog está atualmente em desenvolvivento e pode ser acessado <a href="https://blog.jovanibrasil.com/">aqui</a>. 
                 Em breve, quando eu terminá-lo, começarei a postar sobre diversos assuntos dentro do mundo do 
-                desenvolvimento de software e inteligência artificial. Aqui você pode conferir o estado atual da 
-                implementação e verificar atualizações do projeto.  
+                desenvolvimento de software e inteligência artificial. 
             </p>
-            <ul>
-                <li>
-                    <i class="fa fa-bell"></i>
-                    16/03/2019 - Primeira versão estável, porém ainda o mecânimo de busca não está funcionando.
-                </li>
-            </ul>
         </div>    
     </article>
 </div>
