--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,10 +14,10 @@
                             <a href="https://www.linkedin.com/in/jovanibrasil" title="Linkedin">
                                 <i class="fa fa-linkedin" style="font-size:32px; color: #000;"></i>
                             </a>
-                            <a href="" title="Google Scholar">
+                            <a href="https://scholar.google.com.br/citations?user=nQYs1z4AAAAJ" title="Google Scholar">
                                 <i class="fa fa-graduation-cap" style="font-size:30px; color: #000;"></i>
                             </a>
-                            <a href="" title="Lattes">
+                            <a href="http://lattes.cnpq.br/3411257639128251" title="Lattes">
                                 <img src="/assets/img/lattes-icon.png" height="26px" style="color: #000;"/>
                             </a>
                         </div>
