Update header color and fix cv information

--- a/src/app/cv/cv.component.html
+++ b/src/app/cv/cv.component.html
@@ -5,8 +5,8 @@
                 
                 <h5>Jovani Brasil (Resumido)</h5>
         
-                <p>Olá, Meu nome é Jovani Brasil, tenho 26 anos de idade e atualmente moro em São Jerônimo, Rio Grande do Sul. Sou formando
-                em Ciência da Computação da PUCRS.</p>
+                <p>Olá, Meu nome é Jovani Brasil, tenho 26 anos de idade e atualmente moro em Porto Alegre, Rio Grande do Sul. Sou cientista
+                    da computação formado pela PUCRS.</p>
         
                 <p>Posso dizer que todas as minhas experiências foram dentro da universidade. Em 2012 entrei no Programa de educação
                 tutorial da PUCRS (PET-PUCRS), onde desempenhei iniciação ciêntifica, tendo oportunidade de trabalhar junto a professores
