--- a/src/app/nav-header/nav-header.component.css
+++ b/src/app/nav-header/nav-header.component.css
@@ -1,6 +1,7 @@
 .navbar {
     height: 100px;
     font-size: 1.5em;
+    background-color: brown;
 }
 
 .navbar-nav {
@@ -14,4 +15,12 @@
     display: inline-block;
     float:none;
     padding: 5px 20px;
+}
+
+.nav-link {
+    color: white;
+}
+
+a:hover {
+    color: darkgray;
 }
