--- a/src/app/nav-header/nav-header.component.html
+++ b/src/app/nav-header/nav-header.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="position: relative; ">
-
+<nav class="navbar navbar-expand-lg " style="position: relative; ">
+<!-- navbar-dark bg-dark -->
   <!-- <div class="vertical-centered" style="margin-left: 50px">
     <a class="navbar-brand text-warning" href="#">
       <fa-icon [icon]="faLaptop" ></fa-icon>
