Fix header responsivity

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,10 @@
-<app-nav-header></app-nav-header>
-<router-outlet></router-outlet>
+<!-- <app-nav-header></app-nav-header> -->
+<!-- <router-outlet></router-outlet> -->
+
+<div style="display: flex; flex-direction: column; min-height: 100vh;">
+    <app-nav-header></app-nav-header>
+    <div style="flex: 1; background-color:white; height: 100%;"> 
+      <router-outlet></router-outlet>
+    </div>
+</div>
+  
