--- a/src/app/nav-header/nav-header.component.html
+++ b/src/app/nav-header/nav-header.component.html
@@ -1,16 +1,11 @@
-<nav class="navbar navbar-expand-lg " style="position: relative; ">
-<!-- navbar-dark bg-dark -->
-  <!-- <div class="vertical-centered" style="margin-left: 50px">
-    <a class="navbar-brand text-warning" href="#">
-      <fa-icon [icon]="faLaptop" ></fa-icon>
-      <span >Jovani Brasil</span>
-    </a>
-  </div>
-  -->
+<nav class="navbar navbar-expand-md" style="position: relative">
+
   <button class="navbar-toggler pull-right" type="button" data-toggle="collapse"
     data-target="#navbarColor01" aria-expanded="false" aria-label="Toggle navigation"
     aria-controls="navbarColor01">
-    <span class="navbar-toggler-icon"></span>
+    <span class="navbar-toggler-icon">
+      <i class="fa fa-navicon"></i>
+    </span>
   </button> 
 
   <div class="collapse navbar-collapse" id="navbarColor01">
@@ -18,12 +13,10 @@
       <li class="nav-item active" (click)="setActive($event)" data-toggle="collapse" data-target=".navbar-collapse.show">
         <a class="nav-link" routerLink="/">Home</a>
       </li>
-      <li class="nav-item" (click)="setActive($event)" 
-        data-toggle="collapse" data-target=".navbar-collapse.show">
+      <li class="nav-item" (click)="setActive($event)" data-toggle="collapse" data-target=".navbar-collapse.show">
         <a class="nav-link" routerLink="/projects">Projetos</a>
       </li>
-      <li class="nav-item" (click)="setActive($event)" 
-        data-toggle="collapse" data-target=".navbar-collapse.show">
+      <li class="nav-item" (click)="setActive($event)" data-toggle="collapse" data-target=".navbar-collapse.show">
         <a class="nav-link" routerLink="/blog">Blog</a>
       </li>
       <li class="nav-item" (click)="setActive($event)" data-toggle="collapse" data-target=".navbar-collapse.show">
