--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+@import url(~bootstrap/dist/css/bootstrap.min.css);
+@import url(~font-awesome/css/font-awesome.css);
+
+html, body {
+    height: 100%;
+    font-family: Georgia, 'Times New Roman', Times, serif,  'Times New Roman', Times, serif;
+    font-size: 1.1em;
+}
+
+i, fa-icon {
+    padding: 1px 5px;
+}
