Update personal and projects informations

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -35,18 +35,19 @@
                <article class="text-container item-aligner">
                     <p>Olá, seja bem vindo(a) a minha página pessoal!</p>
                     <p>
-                    Meu nome é Jovani Brasil, sou estudante de ciência da computação na Pontifícia Universidade Católica 
+                    Meu nome é Jovani Brasil, sou Bacharel em Ciência da Computação pela Pontifícia Universidade Católica 
                     do Rio Grande do Sul. Hoje, minhas principais áreas de interesse são engenharia de software, processamento de linguagem natural 
                     e machine learning. Tenho interesse nas mais diversas tecnologias e gosto de estar sempre me atualizando. 
                     Sou apaixonado pela educação à distância, sendo fã de plataformas como 
-                    <a href="https://www.coursera.org/">Coursera</a>, <a href="https://www.udemy.com/">Udemy</a> 
-                    e <a href="https://www.complexityexplorer.org/">Complexity Explorer</a>. 
+                    <a href="https://www.coursera.org/">Coursera</a> (onde atualmente estou cursando 
+                    <a href="https://www.coursera.org/specializations/secure-coding-practices">Secure Coding Practices Specialization</a>), 
+                    <a href="https://www.udemy.com/">Udemy</a> e <a href="https://www.complexityexplorer.org/">Complexity Explorer</a>. 
                     Caso necessário, sinta-se à vontade para entrar em contato comigo. 
                     Você também pode visitar meu <a href="/CV">CV</a>, para mais detalhes sobre minhas qualificações.
                     </p>
                     <p>
                     A ideia desta página é concentrar meus projetos, ideias e currículo. Em especial, visite meus
-                    <a href="/Projects">projetos</a> e verifique alguns dos artefatos produzidos durante os meus estudos.  
+                    <a href="/Projects">projetos</a> e verifique alguns dos artefatos produzidos durante os meus estudos recentes.  
                     </p>
                     <p>
                     Esta página e meus projetos estão todos em desenvolvimento, então sugestões de melhorias e notificações de erros são bem 
