--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -2,17 +2,18 @@
     <div class="aligner">
         <article class="text-container item-aligner">
                <p>
-                    Aqui estão listados os projetos que venho desenvolvendo nos últimos meses. No desenvolvimento dos meus projetos 
-                    estão sendo utilizadas diversas tecnologias com alta demanda na indústria de desenvolvimento de software. 
+                    Aqui estão listados os projetos que venho desenvolvendo nos últimos meses. Para tal desenvolvimento, estão sendo utilizadas 
+                    diversas tecnologias com alta demanda na indústria de desenvolvimento de software. 
                </p>
                <p>
                     No que se refere a projetos web, que é o meu foco atual, no frontend estou majoritariamente utilizando Angular e Bootstrap, 
-                    e recentemente comecei um projeto com React. Já no backend estou utilizado JAVA com Spring Framework na maioria dos 
-                    projetos, porém também recentemente iniciei um projeto utilizando Node e Express. No tocante a banco de dados, são 
-                    utilizados os bancos MySQL e MongoDB. Nos projetos desktop tenho utilizado Python e Java SE, Python quando se refere a 
+                    e recentemente comecei explorar o mundo React. Já no backend estou utilizado JAVA com Spring Framework na maioria dos 
+                    projetos, porém também tenho dado uma olhada no Node e no Express. Em relação a banco de dados, tenho utilizado  
+                    os bancos MySQL e MongoDB. Nos projetos desktop tenho utilizado Python e Java SE, Python quando se refere a 
                     análise de dados, e Java para os demais tipos de aplicações. Utilizo o Github como repositório dos projetos e um servidor 
                     na AWS (configurado do zero) para rodar os projetos com toda a infra de containers Docker. Para integração 
-                    e deploy das aplicações com um bom grau de automação, tenho utilizado Jenkins. 
+                    e deploy das aplicações com um bom grau de automação, tenho utilizado Jenkins. Também vale citar outras ferramentas que venho
+                    utilizando, como o Docker, NGINX e o Solr. 
                </p>
                <p>
                     A ideia é com o tempo ir especificando melhor os detalhes de cada um dos projetos e compartilhar esse conhecimento por
@@ -28,7 +29,7 @@
                 <div class="card-header" id="blogCardHead">
                     <h5 class="mb-0">
                         <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#blogCardContent" 
-                            aria-expanded="false" aria-controls="blogCardContent">Blog</button>
+                            aria-expanded="false" aria-controls="blogCardContent">Blog Pessoal</button>
                     </h5>
                 </div>
                 <div id="blogCardContent" class="collapse" aria-labelledby="blogCardHead" data-parent="#accordion">
