Fix projects url

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -47,7 +47,7 @@
                     </p>
                     <p>
                     A ideia desta página é concentrar meus projetos, ideias e currículo. Em especial, visite meus
-                    <a href="/Projects">projetos</a> e verifique alguns dos artefatos produzidos durante os meus estudos recentes.  
+                    <a href="/projects">projetos</a> e verifique alguns dos artefatos produzidos durante os meus estudos recentes.  
                     </p>
                     <p>
                     Esta página e meus projetos estão todos em desenvolvimento, então sugestões de melhorias e notificações de erros são bem 
