--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -43,7 +43,7 @@
                     <a href="https://www.coursera.org/specializations/secure-coding-practices">Secure Coding Practices Specialization</a>), 
                     <a href="https://www.udemy.com/">Udemy</a> e <a href="https://www.complexityexplorer.org/">Complexity Explorer</a>. 
                     Caso necessário, sinta-se à vontade para entrar em contato comigo. 
-                    Você também pode visitar meu <a href="/CV">CV</a>, para mais detalhes sobre minhas qualificações.
+                    Você também pode visitar meu <a href="/cv">CV</a>, para mais detalhes sobre minhas qualificações.
                     </p>
                     <p>
                     A ideia desta página é concentrar meus projetos, ideias e currículo. Em especial, visite meus
