Fix blog description

--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -2,9 +2,7 @@
     <article class="aligner">
         <div class="text-container">
             <p>
-                Meu blog está atualmente em desenvolvivento e pode ser acessado <a href="https://blog.jovanibrasil.com/">aqui</a>. 
-                Em breve, quando eu terminá-lo, começarei a postar sobre diversos assuntos dentro do mundo do 
-                desenvolvimento de software e inteligência artificial. 
+                Acesse meu blog <a href="https://blog.jovanibrasil.com/">AQUI</a> (mas lembre que ainda está em desenvolvimento). 
             </p>
         </div>    
     </article>
