--- a/src/app/cv/cv.component.html
+++ b/src/app/cv/cv.component.html
@@ -3,7 +3,7 @@
             <div class="text-container">
                 <h3>Currículo</h3>
                 
-                <h5>Jovani Brasil (Resumido)</h5>
+                <h5>Jovani Brasil (<b>Currículo resumido</b>)</h5>
         
                 <p>Olá, Meu nome é Jovani Brasil, tenho 26 anos de idade e atualmente moro em Porto Alegre, Rio Grande do Sul. Sou cientista
                     da computação formado pela PUCRS.</p>
@@ -14,7 +14,8 @@
                 de desenvolvimento de software, desenvolvendo soluções para teste automatizado (funcional e desempenho) utilizando os
                 princípios de teste baseado em modelos (MBT). Em 2015 iniciei minha jornada no Virtual Humans Simulation 
                 Laboratory (VHLAB-PUCRS), onde fui bolsista, programando e testando os simuladores de multidões Crowdsim e Biocrowds. Lá
-                tive diversas públicações junto ao grupo, tanto nacionais quanto internacionais.</p>
+                tive diversas publicações junto ao grupo, tanto nacionais quanto internacionais (veja as publicações 
+                <a href="http://lattes.cnpq.br/3411257639128251">aqui</a>).</p>
         
                 <p>Desde que saí do VHLAB em meados de 2016, voltei meu foco para a faculdade e no estudo de assuntos relacionados as 
                 disciplinas. Em especial, engenheria de software e inteligência artificial tem sido as áreas que tiveram atenção especial 
@@ -27,7 +28,7 @@
                 <p>Para mais informações sobre a minha pessoa, você pode me mandar um email (jovanibrasil@gmail.com), ou dar uma olhada em meus projetos,
                 ainda e baixar meu currículo, logo abaixo.</p>
         
-                <h5>Download (Currículo completo)</h5>
+                <h5>Download (<b>Currículo completo</b>)</h5>
         
                 Meu currículo completo pode ser baixado em PDF <a href="/assets/jovanibrasil_cv.pdf" download="jovanibrasil_cv" alt="Meu CV">aqui</a>.
             </div>    
