Add Amara reference

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -41,7 +41,8 @@
                     Sou apaixonado pela educação à distância, sendo fã de plataformas como 
                     <a href="https://www.coursera.org/">Coursera</a> (onde atualmente estou cursando 
                     <a href="https://www.coursera.org/specializations/secure-coding-practices">Secure Coding Practices Specialization</a>), 
-                    <a href="https://www.udemy.com/">Udemy</a> e <a href="https://www.complexityexplorer.org/">Complexity Explorer</a>. 
+                    <a href="https://www.udemy.com/">Udemy</a> e <a href="https://www.complexityexplorer.org/">Complexity Explorer</a>.
+                    Sou também tradutor voluntário na plataforma <a href="https://amara.org/pt/">Amara</a>.
                     Caso necessário, sinta-se à vontade para entrar em contato comigo. 
                     Você também pode visitar meu <a href="/cv">CV</a>, para mais detalhes sobre minhas qualificações.
                     </p>
