Fix layout width

--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,9 +1,11 @@
-<div class="row" style="display: flex; flex-direction: column;">
-    <article class="aligner">
-        <div class="text-container">
-            <p>
-                Acesse meu blog <a href="https://blog.jovanibrasil.com/">AQUI</a> (mas lembre que ainda está em desenvolvimento). 
-            </p>
-        </div>    
-    </article>
+<div class="container-fluid">
+    <div class="row" style="display: flex; flex-direction: column;">
+        <article class="aligner">
+            <div class="text-container">
+                <p>
+                    Acesse meu blog <a href="https://blog.jovanibrasil.com/">AQUI</a> (mas lembre que ainda está em desenvolvimento). 
+                </p>
+            </div>    
+        </article>
+    </div>
 </div>
