--- a/src/app/cv/cv.component.html
+++ b/src/app/cv/cv.component.html
@@ -1,4 +1,5 @@
-<div class="row" style="display: flex; flex-direction: column;">
+<div class="container-fluid">
+    <div class="row" style="display: flex; flex-direction: column;">
         <article class="aligner">
             <div class="text-container">
                 <h3>Currículo</h3>
@@ -34,3 +35,4 @@
             </div>    
         </article>
     </div>
+</div>
