Change cardheader cursor

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -21,7 +21,7 @@
                 <div class="card">
                     <div class="card-header" id="blogCardHead">
                         <h5 class="mb-0">
-                            <a class="overflow-hidden collapsed" data-toggle="collapse" data-target="#blogCardContent" 
+                            <a class="title overflow-hidden collapsed" data-toggle="collapse" data-target="#blogCardContent" 
                                 aria-expanded="false" aria-controls="blogCardContent">Blog Pessoal (Spring + Angular + Bootstrap + JPA + MySQL)</a>
                         </h5>
                     </div>
@@ -44,7 +44,7 @@
                 <div class="card">
                     <div class="card-header" id="notesCardHead">
                         <h5 class="mb-0">
-                            <a class="overflow-hidden collapsed" data-toggle="collapse" data-target="#notesCardContent" 
+                            <a class="title title overflow-hidden collapsed" data-toggle="collapse" data-target="#notesCardContent" 
                                 aria-expanded="false" aria-controls="notesCardContent">
                             Aplicativo de lembretes (Spring + Angular + Bootstrap + MongoDB)
                             </a>
@@ -70,7 +70,7 @@
                 <div class="card">
                         <div class="card-header" id="summHeadContent">
                             <h5 class="mb-0">
-                            <a class="overflow-hidden collapsed" data-toggle="collapse" data-target="#summCardContent" aria-expanded="true" aria-controls="summCardContent">
+                            <a class="title overflow-hidden collapsed" data-toggle="collapse" data-target="#summCardContent" aria-expanded="true" aria-controls="summCardContent">
                                 Sumarizador de textos (Java 8 + Lógica Fuzzy + Algoritmos Genéticos + PLN)
                             </a>
                             </h5>
@@ -98,7 +98,7 @@
                 <div class="card">
                     <div class="card-header" id="searchCardHead">
                         <h5 class="mb-0">
-                            <a class="overflow-hidden collapsed" data-toggle="collapse" data-target="#searchCardContent" 
+                            <a class="title overflow-hidden collapsed" data-toggle="collapse" data-target="#searchCardContent" 
                                 aria-expanded="false" aria-controls="searchCardContent">
                             Search API (Solr + Spark)
                             </a>
@@ -127,7 +127,7 @@
                 <div class="card">
                     <div class="card-header" id="authCardHead">
                         <h5 class="mb-0">
-                            <a class="overflow-hidden collapsed" data-toggle="collapse" data-target="#authCardContent" 
+                            <a class="title overflow-hidden collapsed" data-toggle="collapse" data-target="#authCardContent" 
                                 aria-expanded="false" aria-controls="authCardContent">
                             API de autenticação JWT (Spring + JPA + MySQL)
                             </a>
@@ -149,7 +149,7 @@
                 <div class="card">
                     <div class="card-header" id="emailCardHead">
                         <h5 class="mb-0">
-                            <a class="overflow-hidden collapsed" data-toggle="collapse" data-target="#emailCardContent" 
+                            <a class="title overflow-hidden collapsed" data-toggle="collapse" data-target="#emailCardContent" 
                                 aria-expanded="false" aria-controls="emailCardContent">
                             API de email (Spring + Apache Velocity)
                             </a>
@@ -172,7 +172,7 @@
                 <div class="card">
                     <div class="card-header" id="snifferCardHead">
                         <h5 class="mb-0">
-                            <a class="overflow-hidden collapsed" data-toggle="collapse" data-target="#snifferCardContent" 
+                            <a class="title overflow-hidden collapsed" data-toggle="collapse" data-target="#snifferCardContent" 
                                 aria-expanded="false" aria-controls="snifferCardContent">
                             Sniffer (Java 8 + C)
                             </a>
@@ -199,7 +199,7 @@
                     <div class="card">
                     <div class="card-header" id="jvCardHead">
                         <h5 class="mb-0">
-                            <a class="overflow-hidden collapsed" data-toggle="collapse" data-target="#jvCardContent" 
+                            <a class="title overflow-hidden collapsed" data-toggle="collapse" data-target="#jvCardContent" 
                                 aria-expanded="false" aria-controls="jvCardContent">
                             Site Pessoal (Angular + Bootstrap)
                             </a>
@@ -221,7 +221,7 @@
                     <div class="card">
                     <div class="card-header" id="petCardHead">
                         <h5 class="mb-0">
-                            <a class="overflow-hidden collapsed" data-toggle="collapse" data-target="#petCardContent" 
+                            <a class="title overflow-hidden collapsed" data-toggle="collapse" data-target="#petCardContent" 
                                 aria-expanded="false" aria-controls="petCardContent">
                                 Pet-Clinic (Spring + Thymeleaf + Bootstrap + MySQL)
                             </a>
@@ -245,7 +245,7 @@
                 <div class="card">
                     <div class="card-header" id="storeCardHead">
                         <h5 class="mb-0">
-                            <a class="overflow-hidden collapsed" data-toggle="collapse" data-target="#storeCardContent" 
+                            <a class="title overflow-hidden collapsed" data-toggle="collapse" data-target="#storeCardContent" 
                                 aria-expanded="false" aria-controls="storeCardContent">
                                 Store System (JAVA EE + JSF + Primefaces + Hibernate + MySQL)
                             </a>
@@ -268,7 +268,7 @@
                 <div class="card">
                     <div class="card-header" id="kvCardHead">
                         <h5 class="mb-0">
-                            <a class="overflow-hidden collapsed" data-toggle="collapse" data-target="#kvCardContent" 
+                            <a class="title overflow-hidden collapsed" data-toggle="collapse" data-target="#kvCardContent" 
                                 aria-expanded="false" aria-controls="kvCardContent">
                             Kings Valley Game (Webservice SOAP - JAX-WS)
                             </a>
@@ -293,7 +293,7 @@
                 <div class="card">
                     <div class="card-header" id="socialCardHead">
                         <h5 class="mb-0">
-                            <a class="overflow-hidden collapsed" data-toggle="collapse" data-target="#socialCardContent" 
+                            <a class="title overflow-hidden collapsed" data-toggle="collapse" data-target="#socialCardContent" 
                                 aria-expanded="false" aria-controls="socialCardContent">
                                 Social Network (NodeJs + React)
                             </a>
@@ -319,7 +319,7 @@
                     <div class="card">
                     <div class="card-header" id="privateCardHead">
                         <h5 class="mb-0">
-                            <a class="overflow-hidden collapsed" data-toggle="collapse" data-target="#privateCardContent" 
+                            <a class="title overflow-hidden collapsed" data-toggle="collapse" data-target="#privateCardContent" 
                                 aria-expanded="false" aria-controls="privateCardContent">
                             Escape From Hell, Cheetah e Camel Racing (Android + Java + LibGdx + Spring)
                             </a>
@@ -342,7 +342,7 @@
                     <div class="card">
                     <div class="card-header" id="filesCardHead">
                         <h5 class="mb-0">
-                            <a class="overflow-hidden collapsed" data-toggle="collapse" data-target="#filesCardContent" 
+                            <a class="title overflow-hidden collapsed" data-toggle="collapse" data-target="#filesCardContent" 
                                 aria-expanded="false" aria-controls="filesCardContent">
                             Dockerfiles 
                             </a>
