Update informations and CV url. Closes #7

--- a/src/app/cv/cv.component.html
+++ b/src/app/cv/cv.component.html
@@ -6,11 +6,11 @@
                 
                 <h5>Jovani Brasil (<b>Currículo resumido</b>)</h5>
         
-                <p>Olá, Meu nome é Jovani Brasil, tenho 26 anos de idade e atualmente moro em Porto Alegre, Rio Grande do Sul. Sou cientista
+                <p>Olá, Meu nome é Jovani Brasil, tenho 27 anos de idade e atualmente moro em Porto Alegre, Rio Grande do Sul. Sou cientista
                     da computação formado pela PUCRS.</p>
         
-                <p>Posso dizer que todas as minhas experiências foram dentro da universidade. Em 2012 entrei no Programa de educação
-                tutorial da PUCRS (PET-PUCRS), onde desempenhei iniciação ciêntifica, tendo oportunidade de trabalhar junto a professores
+                <p>Posso dizer que todas as minhas experiências foram dentro da universidade. Em 2012 entrei no Programa de Educação
+                Tutorial da PUCRS (PET-PUCRS), onde desempenhei iniciação ciêntifica, tendo oportunidade de trabalhar junto a professores
                 da PUCRS. Em 2013 entrei no Centro de Pesquisas em Engenharia de Sistemas da PUCRS (CePeS-PUCRS), onde era estagiário
                 de desenvolvimento de software, desenvolvendo soluções para teste automatizado (funcional e desempenho) utilizando os
                 princípios de teste baseado em modelos (MBT). Em 2015 iniciei minha jornada no Virtual Humans Simulation 
@@ -22,16 +22,16 @@
                 disciplinas. Em especial, engenheria de software e inteligência artificial tem sido as áreas que tiveram atenção especial 
                 nos últimos meses, sendo que amo ambas as áreas e considero de extrema valia para a computação.</p>
         
-                <p>Atualmente estou focado no estudo de diversas tecnologias com alta demanda na indústria, como as linguagens 
-                    JAVA, Python, C, e JavaScript, utilizando diversas tecnologias como Servlets, 
-                 JSP, JPA, JSF, Primefaces, Spring, Hibernate, Maven, Node, Nginx, Docker, Jenkins, JUnit e Solr.</p>
+                <p>Atualmente estou focado no estudo de diversas tecnologias com alta demanda na indústria, em especial Java 
+                    e o Spring Framework. Meus estudos também compreendem as linguagens Python, C, e JavaScript, TypeScript, utilizando diversas tecnologias 
+                    como Servlets, JSP, JPA, JSF, Primefaces, Angular, Hibernate, Flyway, Maven, Node, Nginx, Vault, Docker, Jenkins, JUnit e Solr.</p>
         
                 <p>Para mais informações sobre a minha pessoa, você pode me mandar um email (jovanibrasil@gmail.com), ou dar uma olhada em meus projetos,
                 ainda e baixar meu currículo, logo abaixo.</p>
         
                 <h5>Download (<b>Currículo completo</b>)</h5>
         
-                Meu currículo completo pode ser baixado em PDF <a href="/assets/jovanibrasil_cv.pdf" download="jovanibrasil_cv" alt="Meu CV">aqui</a>.
+                Meu currículo completo pode ser baixado em PDF <a href="https://drive.google.com/file/d/1DH9QToP4ZWIJ8cXPR7qT4DlSbihtn1Hw/view" download="jovanibrasil_cv" alt="Meu CV">aqui</a>.
             </div>    
         </article>
     </div>
