--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -5,8 +5,8 @@
                     <p>
                         Aqui estão listados os projetos que venho desenvolvendo nos últimos meses. Para tal desenvolvimento, estão sendo utilizadas 
                         diversas tecnologias com alta demanda na indústria de desenvolvimento de software. <span class="text-danger">Devido a limitações
-                        dos servidores utilizados, qualquer aplicação que esteja disponível ao público pode sobrer instabilidades ou até mesmo ficar 
-                        indisponível (por exemplo, o aplicativo de notas). </span>
+                        dos servidores utilizados, qualquer aplicação minha que esteja disponível ao público pode sobrer instabilidades ou até mesmo ficar 
+                        indisponível. </span>
                     </p>
                     <p>
                         A ideia é com o tempo ir especificando melhor os detalhes de cada um dos projetos e compartilhar esse conhecimento por
@@ -184,9 +184,9 @@
                                 Neste projeto o objetivo é aprender mais sobre a integração de Java com linguagens de mais baixo
                                 nível, como C. O recurso que permite integração e que foi utilizado aqui é o JNI (Java Native Interface).
     
-                                Um Sniffer implementado em C (que utiliza basicamente RAW sockets) será integrado com uma
+                                Um Sniffer implementado em C (que utiliza basicamente RAW sockets) está sendo integrado com uma
                                 GUI (Graphical User Interface). A ideia inicial é realizar uma simples integração e com o tempo
-                                novas features serão adicionadas.
+                                novas features deverão ser consideradas no projeto.
                             </p>
                             <p>
                                 <a href="https://github.com/jovanibrasil/sniffer">Aqui</a> está o 
@@ -223,20 +223,22 @@
                         <h5 class="mb-0">
                             <a class="title overflow-hidden collapsed" data-toggle="collapse" data-target="#petCardContent" 
                                 aria-expanded="false" aria-controls="petCardContent">
-                                Pet-Clinic (Spring + Thymeleaf + Bootstrap + MySQL)
+                                Pet-Clinic e Recipes (Spring + Thymeleaf + Bootstrap + MySQL)
                             </a>
                         </h5>
                     </div>
                     <div id="petCardContent" class="collapse" aria-labelledby="petCardHead" data-parent="#accordion">
                         <div class="card-body">
                             <p>
-                                Aplicação que eu comecei a desenvolver recentemente no curso 
+                                Aplicações que eu comecei a desenvolver recentemente no curso 
                                 <a href="https://www.udemy.com/course/spring-framework-5-beginner-to-guru/">Spring Framework 5: Beginner to Guru</a>.
-                                É um pequeno sistema de informação para clínica de animais.
+                                O Pet-Clinic um pequeno sistema de informação para clínica de animais. Já o Recipes é sistema para cadastro e consulta
+                                de receitas culinárias.
                             </p>
                             <p>
                                 <a href="https://github.com/jovanibrasil/pet-clinic">Aqui</a> está o 
-                                link para o repositório do código fonte do projeto.       
+                                link para o repositório do código fonte do Pet-Clinic e 
+                                <a href="https://github.com/jovanibrasil/recipes">aqui</a> o repositório do Recipes.       
                             </p>
                         </div>
                     </div>
@@ -367,7 +369,7 @@
         <div class="aligner">
             <article class="text-container item-aligner">
                 <p>
-                    Lembre-se, qualquer dúvida, sugestão, conselho ou reclamação, fique a vontade para me enviar um email.
+                    Fique a vontade para me enviar email para jovanibrasil@gmail.com no caso de qualquer dúvida, sugestão ou reclamação.
                 </p>
             </article>
         </div>
