Fix complete CV URL

--- a/src/app/cv/cv.component.html
+++ b/src/app/cv/cv.component.html
@@ -31,7 +31,7 @@
         
                 <h5>Download (<b>Currículo completo</b>)</h5>
         
-                Meu currículo completo pode ser baixado em PDF <a href="https://drive.google.com/file/d/1DH9QToP4ZWIJ8cXPR7qT4DlSbihtn1Hw/view" download="jovanibrasil_cv" alt="Meu CV">aqui</a>.
+                Meu currículo completo pode ser baixado em PDF <a href="https://drive.google.com/open?id=1QDUOmVs-3DaLfiVLgYzJvDcwY9BLRm9I" download="jovanibrasil_cv" alt="Meu CV">aqui</a>.
             </div>    
         </article>
     </div>
