Fix image paths

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
             <div class="aligner">
                 <div class="item-aligner" style="text-align: center; margin: 30px 0px">
         
-                        <img class="circular" src="/assets/img/me.jpg" alt="Jovani Brasil" height="220px">
+                        <img class="circular" src="./assets/img/me.jpg" alt="Jovani Brasil" height="220px">
                         
                         <div class="in-line center">
                             <a href="https://github.com/jovanibrasil" title="Github">
@@ -18,7 +18,7 @@
                                 <i class="fa fa-graduation-cap" style="font-size:30px; color: #000;"></i>
                             </a>
                             <a href="http://lattes.cnpq.br/3411257639128251" title="Lattes">
-                                <img src="/assets/img/lattes-icon.png" height="26px" style="color: #000;"/>
+                                <img src="./assets/img/lattes-icon.png" height="26px" style="color: #000;"/>
                             </a>
                         </div>
                         
