Update personal informations

--- a/src/app/cv/cv.component.html
+++ b/src/app/cv/cv.component.html
@@ -18,9 +18,14 @@
                 tive diversas publicações junto ao grupo, tanto nacionais quanto internacionais (veja as publicações 
                 <a href="http://lattes.cnpq.br/3411257639128251">aqui</a>).</p>
         
-                <p>Desde que saí do VHLAB em meados de 2016, voltei meu foco para a faculdade e no estudo de assuntos relacionados as 
+                <p>Quando que saí do VHLAB em meados de 2016, voltei meu foco para a faculdade e no estudo de assuntos relacionados as 
                 disciplinas. Em especial, engenheria de software e inteligência artificial tem sido as áreas que tiveram atenção especial 
                 nos últimos meses, sendo que amo ambas as áreas e considero de extrema valia para a computação.</p>
+
+                <p>Desde março deste ano sou programador na Compasso Uol, como foco principalmente no desenvolvimento de aplicações Java com Spring Boot. 
+                    Na Compasso estou tendo a oportunidade de afiar minhas skills e de vivenciar experiência de projetos, trabalhando em equipe 
+                    e utilizando metodologias ágeis.
+                </p>
         
                 <p>Atualmente estou focado no estudo de diversas tecnologias com alta demanda na indústria, em especial Java 
                     e o Spring Framework. Meus estudos também compreendem as linguagens Python, C, e JavaScript, TypeScript, utilizando diversas tecnologias 
@@ -31,7 +36,7 @@
         
                 <h5>Download (<b>Currículo completo</b>)</h5>
         
-                Meu currículo completo pode ser baixado em PDF <a href="https://drive.google.com/open?id=1QDUOmVs-3DaLfiVLgYzJvDcwY9BLRm9I" download="jovanibrasil_cv" alt="Meu CV">aqui</a>.
+                Meu currículo completo pode ser baixado em PDF <a href="./assets/docs/cv-jovani.pdf" download="jovani-cv" alt="Meu CV">aqui</a>.
             </div>    
         </article>
     </div>
