--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -36,11 +36,11 @@
                     <p>Olá, seja bem vindo(a) a minha página pessoal!</p>
                     <p>
                     Meu nome é Jovani Brasil, sou Bacharel em Ciência da Computação pela Pontifícia Universidade Católica 
-                    do Rio Grande do Sul. Hoje, minhas principais áreas de interesse são engenharia de software, processamento de linguagem natural 
+                    do Rio Grande do Sul e atualmente sou programador na Compasso UOL. Hoje, minhas principais áreas de interesse 
+                    são engenharia de software, processamento de linguagem natural 
                     e machine learning. Tenho interesse nas mais diversas tecnologias e gosto de estar sempre me atualizando. 
                     Sou apaixonado pela educação à distância, sendo fã de plataformas como 
-                    <a href="https://www.coursera.org/">Coursera</a> (onde atualmente estou cursando 
-                    <a href="https://www.coursera.org/specializations/secure-coding-practices">Secure Coding Practices Specialization</a>), 
+                    <a href="https://www.coursera.org/">Coursera</a>, 
                     <a href="https://www.udemy.com/">Udemy</a> e <a href="https://www.complexityexplorer.org/">Complexity Explorer</a>.
                     Sou também tradutor voluntário na plataforma <a href="https://amara.org/pt/">Amara</a>.
                     Caso necessário, sinta-se à vontade para entrar em contato comigo. 
