Fix home page links

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -44,11 +44,11 @@
                     <a href="https://www.udemy.com/">Udemy</a> e <a href="https://www.complexityexplorer.org/">Complexity Explorer</a>.
                     Sou também tradutor voluntário na plataforma <a href="https://amara.org/pt/">Amara</a>.
                     Caso necessário, sinta-se à vontade para entrar em contato comigo. 
-                    Você também pode visitar meu <a href="/cv">CV</a>, para mais detalhes sobre minhas qualificações.
+                    Você também pode visitar meu <a href="/#/cv">CV</a>, para mais detalhes sobre minhas qualificações.
                     </p>
                     <p>
                     A ideia desta página é concentrar meus projetos, ideias e currículo. Em especial, visite meus
-                    <a href="/projects">projetos</a> e verifique alguns dos artefatos produzidos durante os meus estudos recentes.  
+                    <a href="/#/projects">projetos</a> e verifique alguns dos artefatos produzidos durante os meus estudos recentes.  
                     </p>
                     <p>
                     Esta página e meus projetos estão todos em desenvolvimento, então sugestões de melhorias e notificações de erros são bem 
