Remove projects and blog pages

--- a/src/app/cv/cv.component.html
+++ b/src/app/cv/cv.component.html
@@ -9,7 +9,7 @@
                 <p>Olá, Meu nome é Jovani Brasil, tenho 27 anos de idade e atualmente moro em Porto Alegre, Rio Grande do Sul. Sou cientista
                     da computação formado pela PUCRS.</p>
         
-                <p>Posso dizer que todas as minhas experiências foram dentro da universidade. Em 2012 entrei no Programa de Educação
+                <p>Minhas primeiras experiências foram dentro da universidade. Em 2012 entrei no Programa de Educação
                 Tutorial da PUCRS (PET-PUCRS), onde desempenhei iniciação ciêntifica, tendo oportunidade de trabalhar junto a professores
                 da PUCRS. Em 2013 entrei no Centro de Pesquisas em Engenharia de Sistemas da PUCRS (CePeS-PUCRS), onde era estagiário
                 de desenvolvimento de software, desenvolvendo soluções para teste automatizado (funcional e desempenho) utilizando os
@@ -28,11 +28,12 @@
                 </p>
         
                 <p>Atualmente estou focado no estudo de diversas tecnologias com alta demanda na indústria, em especial Java 
-                    e o Spring Framework. Meus estudos também compreendem as linguagens Python, C, e JavaScript, TypeScript, utilizando diversas tecnologias 
-                    como Servlets, JSP, JPA, JSF, Primefaces, Angular, Hibernate, Flyway, Maven, Node, Nginx, Vault, Docker, Jenkins, JUnit e Solr.</p>
+                    e o Spring Framework. Meus estudos também compreendem as linguagens JavaScript e TypeScript, diversas tecnologias 
+                    como JPA, Angular, Hibernate, Flyway, Maven, Node, Docker, Postman, Jenkins, JUnit, Jacoco, Cucumber, Solr, 
+                    MariaDB, MySQL, MongoDB, Kafka e RabbitMQ.</p>
         
-                <p>Para mais informações sobre a minha pessoa, você pode me mandar um email (jovanibrasil@gmail.com), ou dar uma olhada em meus projetos,
-                ainda e baixar meu currículo, logo abaixo.</p>
+                <p>Para mais informações sobre a minha pessoa, você pode me mandar um email (jovanibrasil@gmail.com), dar uma olhada em meus projetos
+                ou baixar meu currículo completo, logo abaixo.</p>
         
                 <h5>Download (<b>Currículo completo</b>)</h5>
         
